syntax = "proto3";
option java_multiple_files = true;
package org.hypertrace.core.span.constants.v1;

import "org/hypertrace/core/span/constants/v1/enum_extension.proto";

// This file contains constants related to open tracing tracer.
// Written as per
// https://github.com/opentracing/specification/blob/master/semantic_conventions.md
enum OTSpanTag {
  OT_SPAN_TAG_UNSPECIFIED = 0 [(string_value) = "unspecified"];

  // HTTP status code
  OT_SPAN_TAG_HTTP_STATUS_CODE = 1 [(string_value) = "http.status_code"];
  OT_SPAN_TAG_HTTP_METHOD = 2 [(string_value) = "http.method"];
  OT_SPAN_TAG_HTTP_URL = 3 [(string_value) = "http.url"];
  OT_SPAN_TAG_ERROR = 4 [(string_value) = "error"];
  OT_SPAN_TAG_ERROR_KIND = 5 [(string_value) = "error.kind"];
  OT_SPAN_TAG_ERROR_OBJECT = 6 [(string_value) = "error.object"];
  // software framework library
  OT_SPAN_TAG_COMPONENT = 7 [(string_value) = "component"];
}
